--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
   "author": "Anton Pegov <antonpegov@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "npm run build && node server.js"
   },
   "dependencies": {
-    "koa": "^2.5.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "typescript": "^3.1.3"
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "html-webpack-plugin": "^3.2.0",
+    "koa": "^2.5.3",
+    "koa-static": "^5.0.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.2.2",
+    "typescript": "^3.1.3",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
   }
 }
