--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ts-webpack",
   "version": "0.0.1",
-  "description": "My amaizing starter for React typescript apps",
+  "description": "My amazing starter for React typescript apps",
   "main": "index.js",
   "author": "Anton Pegov <antonpegov@gmail.com>",
   "license": "MIT",
