--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "start": "npm run build && node server.js"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "koa": "^2.5.3",
     "koa-static": "^5.0.0",
     "koa-webpack-dev-middleware": "^2.0.2",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.3",
     "webpack": "^4.22.0",
