--- a/package.json
+++ b/package.json
@@ -10,16 +10,33 @@
     "start": "npm run build && node server.js"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "font-awesome": "^4.7.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.3.3",
+    "typesafe-actions": "^2.0.4",
+    "utility-types": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router": "^4.0.32",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.16",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.6",
+    "@types/webpack": "^4.4.17",
+    "bootstrap": "^4.1.3",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
     "koa": "^2.5.3",
     "koa-static": "^5.0.0",
@@ -29,6 +46,10 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-misc-rules": "^3.5.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
