--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,41 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {},
+    "outDir": "out/",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "noEmitHelpers": true,
     "jsx": "react",
-    "module": "commonjs",
+    "lib": ["dom", "es2016", "es2017"],
+    "target": "es2017",
+    "module": "esnext",
+    "moduleResolution": "node",
+    //"noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
-    "outDir": "./build/",
-    "preserveConstEnums": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "strict": true,
+    "strictFunctionTypes": false,
+    "pretty": true,
     "removeComments": true,
-    "sourceMap": true,
-    "target": "es5"
+    "sourceMap": true
   },
-  "include": [
-    "./src/**/**/*"
+  "include": ["src/**/*", "typings/*"],
+  "exclude": [
+    "node_modules",
+    "src/**/*.spec.*",
+    "build",
+    "scripts",
+    "webpack",
+    "src/setupTests.ts"
   ]
 }
