--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start": "npm run build && node server.js"
   },
   "dependencies": {
+    "connected-react-router": "^4.5.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
@@ -29,7 +29,6 @@
     "@types/react-redux": "^6.0.9",
     "@types/react-router": "^4.0.32",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.16",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
     "@types/webpack": "^4.4.17",
