--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "moduleResolution": "node",
     //"noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
